syntax = "proto3";
package account;
option go_package = "ms.api/protos/pb/accountService";

// Import types
import "types.proto";

message SuccessResponse {
  string message = 1;
}

message CreateAccountRequest {
  string identityId = 1;
  types.ProductInput product = 2;
}

message GetAccountRequest {
  string id = 1;
  string identityId = 2;
}

message GetAccountResponse {
  string id = 1;
  string owner = 2;
  string product = 3;
  types.AccountData accountData = 4;
  repeated types.Transaction transactions = 5;
  bool active = 6;
  string status = 7;
  repeated string tags = 8;
  string image = 9;
  string organisation = 10;
  int32 ts = 11;
}

message GetAccountsRequest {
  string identityId = 1;
}

message GetAccountsResponse {
  repeated GetAccountResponse accounts = 1;
}

message ValidateBVNRequest {
  string personId = 1;
  string bvn = 2;
  string phone = 3;
}

service AccountService {
  rpc CreateAccount(CreateAccountRequest) returns (types.Response) {}
  rpc GetAccount(GetAccountRequest) returns (GetAccountResponse) {}
  rpc GetAccounts(GetAccountsRequest) returns (GetAccountsResponse) {}
  rpc ValidateBVN(ValidateBVNRequest) returns (types.Response) {}
}